--- a/Landing_iquitos.html
+++ b/Landing_iquitos.html
@@ -29,10 +29,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
     <title>Iquitos Vive renntable</title>
-    <meta name="description" content="LA JOYA NATURAL ESCONDIDA DEL PERÚ, UNA OPORTUNIDAD INMOBILIARIA INIGUALABLE">
+    <meta name="description" content="Proyecto Iquitos VIVE Rentable: Ingresa para conocer toda la información y ser parte de una inversión que te brindará rentabilidad asegurada.">
 
     <!-- Etiquetas para Facebook -->
-    <meta property="og:title" content="IQUITOS">
+    <meta property="og:title" content="Proyecto Iquitos VIVE Rentable">
     <meta property="og:description"
         content="LA JOYA NATURAL ESCONDIDA DEL PERÚ, UNA OPORTUNIDAD INMOBILIARIA INIGUALABLE">
     <meta property="og:image" content="./assets/seccion8.png">
