--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
     <title>Vive Rentable</title>
-    <meta name="description" content="La clave para una inversión diversificada y rentable">
+    <meta name="description" content="Somos la clave para una inversión diversificada y rentable, contamos con varios proyectos ¡Conócelos Aquí! VIVE Rentable">
 
     <!-- Etiquetas para Facebook -->
     <meta property="og:title" content="Vive Rentable">
     <meta property="og:description"
-        content="La clave para una inversión diversificada y rentable">
+        content="Somos la clave para una inversión diversificada y rentable, contamos con varios proyectos ¡Conócelos Aquí! VIVE Rentable">
     <meta property="og:image" content="./assets/logo.png">
     <meta property="og:url" content="https://www.facebook.com/viverentablepe">
     <meta property="og:type" content="website">
