--- a/Landing_maduracion.html
+++ b/Landing_maduracion.html
@@ -28,12 +28,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
     <title>WEBINAR EXCLUSIVO</title>
-    <meta name="description" content="Las cámaras de maduración de banano, un negocio rentable en el boom agrícola">
+    <meta name="description" content="Proyecto Cámaras de Maduración VIVE Rentable: Ingresa para conocer toda la información y ser parte de una inversión que te brindará rentabilidad asegurada.">
 
     <!-- Etiquetas para Facebook -->
     <meta property="og:title" content="Webinar exclusivo">
     <meta property="og:description"
-        content="Las cámaras de maduración de banano, un negocio rentable en el boom agrícola">
+        content="Proyecto Cámaras de Maduración VIVE Rentable: Ingresa para conocer toda la información y ser parte de una inversión que te brindará rentabilidad asegurada.">
     <meta property="og:image" content="./assets/imagens2_maduracion.png">
     <meta property="og:url" content="https://www.facebook.com/viverentablepe">
     <meta property="og:type" content="website">
