--- a/Landing_maduracion.html
+++ b/Landing_maduracion.html
@@ -28,7 +28,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
     <title>WEBINAR EXCLUSIVO</title>
-    <meta name="description" content="Proyecto Cámaras de Maduración VIVE Rentable: Ingresa para conocer toda la información y ser parte de una inversión que te brindará rentabilidad asegurada.">
+    <meta name="description"
+        content="Proyecto Cámaras de Maduración VIVE Rentable: Ingresa para conocer toda la información y ser parte de una inversión que te brindará rentabilidad asegurada.">
 
     <!-- Etiquetas para Facebook -->
     <meta property="og:title" content="Webinar exclusivo">
@@ -57,10 +58,11 @@
 
 <body>
 
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    <!-- Principio del widget integrado de Calendly -->
+    <div class="calendly-inline-widget"
+        data-url="https://calendly.com/viverentablepe/camara-maduracion?hide_gdpr_banner=1&primary_color=2de601"></div>
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+    <!-- Final del widget integrado de Calendly -->
 
 
     <header>
