--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -29,7 +29,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
     <title>RESERVA TU CITA</title>
-    <meta name="description" content="Proyecto Cámaras de Maduración VIVE Rentable: Ingresa para conocer toda la información y ser parte de una inversión que te brindará rentabilidad asegurada.">
+    <meta name="description"
+        content="Proyecto Cámaras de Maduración VIVE Rentable: Ingresa para conocer toda la información y ser parte de una inversión que te brindará rentabilidad asegurada.">
 
     <!-- Etiquetas para Facebook -->
     <meta property="og:title" content="RESERVA TU CITA">
@@ -158,7 +159,8 @@
         <div class="calendario">
 
             <!-- Principio del widget integrado de Calendly -->
-            <div class="calendly-inline-widget" data-url="https://calendly.com/vive-rentable/reunion-de-inversion">
+            <div class="calendly-inline-widget"
+                data-url="https://calendly.com/viverentablepe/camara-maduracion?hide_gdpr_banner=1&primary_color=2de601">
             </div>
             <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
             <!-- Final del widget integrado de Calendly -->
