--- a/index.html
+++ b/index.html
@@ -948,7 +948,8 @@
     <div class="calendario">
 
       <!-- Principio del widget integrado de Calendly -->
-      <div class="calendly-inline-widget" data-url="https://calendly.com/vive-rentable/reunion-de-inversion"></div>
+      <div class="calendly-inline-widget"
+        data-url="https://calendly.com/viverentablepe/camara-maduracion?hide_gdpr_banner=1&primary_color=2de601"></div>
       <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
       <!-- Final del widget integrado de Calendly -->
     </div>
