--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -28,12 +28,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
-    <title>RESERVA TU CITA</title>
+    <title> VIVE Rentable - Reserva tu cita : Cámaras de maduración</title>
     <meta name="description"
         content="Proyecto Cámaras de Maduración VIVE Rentable: Ingresa para conocer toda la información y ser parte de una inversión que te brindará rentabilidad asegurada.">
 
     <!-- Etiquetas para Facebook -->
-    <meta property="og:title" content="RESERVA TU CITA">
+    <meta property="og:title" content=" VIVE Rentable - Reserva tu cita : Cámaras de maduración">
     <meta property="og:description"
         content="Proyecto Cámaras de Maduración VIVE Rentable: Ingresa para conocer toda la información y ser parte de una inversión que te brindará rentabilidad asegurada.">
     <meta property="og:image" content="./assets/imagens2_maduracion.png">
