--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -135,22 +135,22 @@
 
         0%,
         25% {
-            background-image: url('../assets/im001.jpeg');
+            background-image: url('./assets/fotos/003.jpg');
         }
 
         26%,
         50% {
-            background-image: url('../assets/banner_img/camara_01.png');
+            background-image: url('./assets/fotos/004.jpg');
         }
 
         51%,
         75% {
-            background-image: url('../assets/banner_img/camara_02.png');
+            background-image: url('./assets/fotos/002.jpg');
         }
 
         76%,
         100% {
-            background-image: url('../assets/banner_img/camara_03.png');
+            background-image: url('./assets/fotos/001.jpg');
         }
     }
 
@@ -459,7 +459,9 @@
     }
 
     .contenedor_acordion {
-        padding: 25px;
+        padding-left: 30px;
+        padding-top: 50px;
+        margin-bottom: 20px;
     }
 
     .contenedor_calendario {
@@ -526,10 +528,18 @@
     }
 
     /* --------------- */
+
+    .gen_04 {
+        background-color: #f5f5f5;
+        width: 100%;
+
+    }
+
     .seccion_04 {
         max-width: 800px;
         margin: auto;
         padding-top: 3rem;
+
     }
 
     .seccion_04 h3 {
@@ -541,14 +551,20 @@
 
     .seccion_04 h4 {
         margin-top: 0.5rem;
-        font-size: 2.8rem;
+        font-size: 4rem;
         color: #00AE45;
         text-align: center;
         font-weight: 800;
 
     }
 
+    .seccion_04 h4 span {
+        background-color: #00AE45;
+        color: #fff;
+    }
+
     .s4_cont {
+        padding-top: 30px;
         margin: auto;
         width: 750px;
         display: flex;
@@ -672,7 +688,7 @@
         width: 100%;
         height: 400px;
         text-align: center;
-        background-image: url('../assets/im001.jpeg');
+        background-image: url('./assets/fotos/003.jpg');
         background-size: cover;
         color: black;
     }
@@ -1062,7 +1078,7 @@
 
                     <div class="text_01">
                         <img class="logo" src="./assets/logo_negativo.png" alt="logo">
-                        <h1> DESCUBRE EL NEGOCIO RENTABLE DE <br>
+                        <h1>
                             LAS CÁMARAS DE MADURACIÓN DE BANANO</h1>
                         <h2>Una inversión rentable en el boom agrícola</h2>
 
@@ -1078,13 +1094,11 @@
 
     <section class="seccion_01">
         <div class="s1_cont">
-            <img src="./assets/imagens2_maduracion.png" alt="">
+            <img src="./assets/fotos/001.jpg" alt="">
             <div class="parrafo1">
                 <p>En pleno auge de la Agricultura peruana, invertir bien es invertir en las necesidades de un sector
-                    que crece de manera acelerada y que aún pocos inversionistas lo hacen. Los pocos visionarios
-                    <span>no sólo
-                        ven retornar su inversión</span> de manera rápida, sino que <span>multiplican su capital.</span>
-                </p>
+                    que crece de manera acelerada y que aún pocos inversionistas lo hacen. Los pocos visionarios no sólo
+                    ven retornar su inversión de manera rápida, sino que multiplican su capital.</p>
                 <p>Muchos invierten en sembrar y pocos invierten en satisfacer las necesidades de los que siembran y del
                     producto cosechado: ¡Los servicios de conservación y maduración!</p>
             </div>
@@ -1099,7 +1113,7 @@
                         brecha en el mercado!</span></p>
 
             </div>
-            <img src="./assets/im002.jpeg" alt="">
+            <img src="./assets/fotos/002.jpg" alt="">
         </div>
 
     </section>
@@ -1117,35 +1131,40 @@
     </section>
 
 
-    <section class="seccion_04">
-        <h3>¿Te gustaría ser parte de este rentable negocio?</h3>
-        <h4>SÉ SOCIO DESDE S/.20,000 <br> Y</h4>
-        <div>
-            <div class="s4_cont">
-                <img src="./assets/nuevo/s401.png" alt="">
-                <p>Conviértete en uno de los <span>inversionistas pioneros</span>
-                    que satisfaga la creciente demanda
-                    de servicios de maduración y conservación.</p>
+    <section class="gen_04">
+        <div class="seccion_04">
+            <h3>¿Te gustaría ser parte de este rentable negocio?</h3>
+            <h4>SÉ SOCIO DESDE <span>S/.20,000</span></h4>
+            <div>
+                <div class="s4_cont">
+                    <img src="./assets/nuevo/s401.png" alt="">
+                    <p>Conviértete en uno de los <span>inversionistas pioneros</span>
+                        que satisfaga la creciente demanda
+                        de servicios de maduración y conservación.</p>
+                </div>
+                <div class="s4_cont">
+                    <img src="./assets/nuevo/s402.png" alt="">
+                    <p><span>Factura desde el primer día</span> de instaladala
+                        la cámara</p>
+                </div>
+                <div class="s4_cont">
+                    <img src="./assets/nuevo/s403.png" alt="">
+                    <p>Ser parte de un negocio cuyo <span>retorno</span> sobre la inversión es a <span>6 meses</span>
+                    </p>
+                </div>
+                <div class="s4_cont">
+                    <img src="./assets/nuevo/s404.png" alt="">
+                    <p>Más del <span>100%</span> de rentabilidad anual</p>
+                </div>
+                <div class="s4_cont">
+                    <img src="./assets/nuevo/s405.png" alt="">
+                    <p>Negocio de por vida</p>
+                </div>
             </div>
-            <div class="s4_cont">
-                <img src="./assets/nuevo/s402.png" alt="">
-                <p><span>Factura desde el primer día</span> de instaladala
-                    la cámara</p>
-            </div>
-            <div class="s4_cont">
-                <img src="./assets/nuevo/s403.png" alt="">
-                <p>Ser parte de un negocio cuyo <span>retorno</span> sobre la inversión es a <span>6 meses</span></p>
-            </div>
-            <div class="s4_cont">
-                <img src="./assets/nuevo/s404.png" alt="">
-                <p>Más del <span>100%</span> de rentabilidad anual</p>
-            </div>
-            <div class="s4_cont">
-                <img src="./assets/nuevo/s405.png" alt="">
-                <p>Negocio de por vida</p>
-            </div>
-        </div>
 
+
+
+        </div>
 
 
     </section>
@@ -1156,7 +1175,7 @@
     <section class="seccion_03" id="contact">
         <div class="s3_01">
             <div class="contenedor_acordion">
-                <h3>¡Descubre cómo hacerlo en una cita con un Asesor!</h3>
+                <h3>¡Descubre cómo ser socio en una cita con un Asesor!</h3>
                 <p>En esta reunión el asesor(a) comercial te explicará como puedes ser socio de una cámara de maduración
                     y disfrutar de las utilidades que ésta genera sin preocuparte por labores operativas y comerciales y
                     teniendo el control y el conocimiento en tiempo real de tu inversión:</p>
