--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -1079,8 +1079,8 @@
                     <div class="text_01">
                         <img class="logo" src="./assets/logo_negativo.png" alt="logo">
                         <h1>
-                            LAS CÁMARAS DE MADURACIÓN DE BANANO</h1>
-                        <h2>Una inversión rentable en el boom agrícola</h2>
+                            Descubre la Oportunidad de Oro en el Negocio de Maduración de Banano</h1>
+                        <h2>Una Inversión Única en un Mercado de Alta Demanda</h2>
 
                     </div>
                 </div>
@@ -1096,21 +1096,21 @@
         <div class="s1_cont">
             <img src="./assets/fotos/001.jpg" alt="">
             <div class="parrafo1">
-                <p>En pleno auge de la Agricultura peruana, invertir bien es invertir en las necesidades de un sector
-                    que crece de manera acelerada y que aún pocos inversionistas lo hacen. Los pocos visionarios no sólo
-                    ven retornar su inversión de manera rápida, sino que multiplican su capital.</p>
-                <p>Muchos invierten en sembrar y pocos invierten en satisfacer las necesidades de los que siembran y del
-                    producto cosechado: ¡Los servicios de conservación y maduración!</p>
+                <p>¿Alguna vez has soñado con ser parte de un negocio que no solo es rentable sino también vital en el
+                    mercado actual? Bienvenido a una oportunidad única en el mundo de la maduración de banano, un sector
+                    donde la demanda siempre supera la oferta.</p>
+                <p>Imagina ser el motor detrás de 5500 cajas de bananos cada semana, con un margen de ganancia de
+                    S/.2.40 por caja. No es solo un negocio; es una máquina de hacer dinero esperando a ser aprovechada.
+                </p>
             </div>
         </div>
         <div class="s1_cont coo">
             <div class="parrafo2">
-                <p>La demanda de estos servicios supera con creces a la oferta actual. Miles de servicios de maduración
-                    se facturan diariamente, pero miles más quedan en espera debido a la escasez de cámaras de
-                    maduración en Lima y en todo el Perú.Es ahí donde se abren las oportunidades para todo inversor
-                    visionario.</p>
-                <p> <span>¡Es hora de capitalizar esta <br>
-                        brecha en el mercado!</span></p>
+                <p>Pero, ¿qué hace que esta oportunidad sea tan especial? Primero, el banano es más que una fruta; es un
+                    símbolo de nutrición rápida y saludable, un elemento básico en la dieta de millones. En el mercado
+                    nacional, su rotación es incomparable, lo que convierte a las cámaras de maduración en una necesidad
+                    más que en un lujo.</p>
+                <p> <span>Y aquí es donde tú entras. Te ofrecemos no solo un negocio, sino un legado.</span></p>
 
             </div>
             <img src="./assets/fotos/002.jpg" alt="">
