--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -1096,18 +1096,18 @@
         <div class="s1_cont">
             <img src="./assets/fotos/001.jpg" alt="">
             <div class="parrafo1">
-                <p>¿Alguna vez has soñado con ser parte de un negocio que no solo es rentable sino también vital en el
+                <p>¿Alguna vez has soñado con ser parte de un negocio que no solo es rentable, sino también vital en el
                     mercado actual? Bienvenido a una oportunidad única en el mundo de la maduración de banano, un sector
-                    donde la demanda siempre supera la oferta.</p>
+                    en donde la demanda siempre supera la oferta.</p>
                 <p>Imagina ser el motor detrás de 5500 cajas de bananos cada semana, con un margen de ganancia de
-                    S/.2.40 por caja. No es solo un negocio; es una máquina de hacer dinero esperando a ser aprovechada.
+                    S/.2.40 por caja. No es solo un negocio, es una máquina de hacer dinero esperando a ser aprovechada.
                 </p>
             </div>
         </div>
         <div class="s1_cont coo">
             <div class="parrafo2">
-                <p>Pero, ¿qué hace que esta oportunidad sea tan especial? Primero, el banano es más que una fruta; es un
-                    símbolo de nutrición rápida y saludable, un elemento básico en la dieta de millones. En el mercado
+                <p>Pero, ¿qué hace que esta oportunidad sea tan especial? el banano es más que una fruta; es un
+                    símbolo de nutrición rápido y saludable, un elemento básico en la dieta de millones. En el mercado
                     nacional, su rotación es incomparable, lo que convierte a las cámaras de maduración en una necesidad
                     más que en un lujo.</p>
                 <p> <span>Y aquí es donde tú entras. Te ofrecemos no solo un negocio, sino un legado.</span></p>
@@ -1121,8 +1121,8 @@
     <section class="seccion_02">
         <div class="s02_texto">
             <h2>INVERTIR BIEN Y <br> CON VISIÓN ES:</h2>
-            <p>INVERTIR EN LAS NECESIDADES DE UN SECTOR QUE CRECE DE MANERA ACELERADA Y QUE AUN POCOS INVERSIONISTAS LO
-                HACEN</p>
+            <p>INVERTIR EN LAS NECESIDADES DE UN SECTOR QUE CRECE DE MANERA ACELERADA Y QUE AÚN POCOS INVERSIONISTAS LO
+                HACEN.</p>
             <h3>“LA CÁMARA DE MADURACIÓN DE FRUTAS”</h3>
 
         </div>
@@ -1144,12 +1144,12 @@
                 </div>
                 <div class="s4_cont">
                     <img src="./assets/nuevo/s402.png" alt="">
-                    <p><span>Factura desde el primer día</span> de instaladala
+                    <p><span>Factura desde el primer día</span> de instalada
                         la cámara</p>
                 </div>
                 <div class="s4_cont">
                     <img src="./assets/nuevo/s403.png" alt="">
-                    <p>Ser parte de un negocio cuyo <span>retorno</span> sobre la inversión es a <span>6 meses</span>
+                    <p>Ser parte de un negocio cuyo <span>retorno</span> sobre la inversión es aproximadamente <span>6 meses</span>
                     </p>
                 </div>
                 <div class="s4_cont">
