--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -135,7 +135,7 @@
 
         0%,
         25% {
-            background-image: url('./assets/fotos/003.jpg');
+            background-image: url('./assets/fotos/001.jpg');
         }
 
         26%,
@@ -688,7 +688,7 @@
         width: 100%;
         height: 400px;
         text-align: center;
-        background-image: url('./assets/fotos/003.jpg');
+        background-image: url('./assets/fotos/001.jpg');
         background-size: cover;
         color: black;
     }
@@ -1149,7 +1149,8 @@
                 </div>
                 <div class="s4_cont">
                     <img src="./assets/nuevo/s403.png" alt="">
-                    <p>Ser parte de un negocio cuyo <span>retorno</span> sobre la inversión es aproximadamente <span>6 meses</span>
+                    <p>Ser parte de un negocio cuyo <span>retorno</span> sobre la inversión es aproximadamente <span>6
+                            meses a un año</span> 
                     </p>
                 </div>
                 <div class="s4_cont">
@@ -1224,24 +1225,13 @@
             <div class="contenedor_calendario">
 
 
-                <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
-                <script>
-                    hbspt.forms.create({
-                        region: "na1",
-                        portalId: "45521487",
-                        formId: "b7db900c-e79c-4e5f-ac6e-583c53878119"
-                    });
-                </script>
-                <!-- Comienzo del código del formulario de enrutamiento de Calendly -->
-                <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-                <script src="https://assets.calendly.com/assets/external/forms.js" type="text/javascript"
+                <!-- Principio del widget integrado de Calendly -->
+                <div class="calendly-inline-widget"
+                    data-url="https://calendly.com/viverentablepe/camara-maduracion?hide_gdpr_banner=1&primary_color=2de601"
+                    style="min-width:320px;height:700px;"></div>
+                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"
                     async></script>
-                <script type="text/javascript">
-                    window.addEventListener('load', function () {
-                        Calendly.initHubspotForm({ "id": "b7db900c-e79c-4e5f-ac6e-583c53878119", "url": "https://calendly.com/api/form_builder/forms/d8003f8c-6f3a-4dc0-8b50-b4fb6f746871/submissions", "options": { "hide_event_type_details": 1, "hide_gdpr_banner": 1 } })
-                    })
-                </script>
-                <!-- Fin del código del formulario de enrutamiento de Calendly -->
+                <!-- Final del widget integrado de Calendly -->
 
             </div>
 
