--- a/gracias.html
+++ b/gracias.html
@@ -219,13 +219,12 @@
                 maduración porque la demanda está insatisfecha. ¿Te gustaría aprovechar esta oportunidad?</p>
         </div>
 
-        <p>En la reunión programada con nuestro asesor(a) Comercial puedes sumergirte en el próspero negocio de las
-            cámaras de maduración de banano</p>
+      
 
         <h3>Mantente atento a tu bandeja de entrada, donde te proporcionaremos toda la información necesaria sobre la
             cita. </h3>
 
-        <p>Además te invitamos a <span>UNIRTE</span> a nuestra comunidad en <span>Telegram y WhatsApp</span> para estar
+        <p>Además te invitamos a <span>UNIRTE</span> a nuestra comunidad de <span>WhatsApp</span> para estar
             siempre al tanto de las últimas novedades y consejos expertos</p>
 
         <div class="iconos">
