update other pc

--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -1096,9 +1096,10 @@
         <div class="s1_cont">
             <img src="./assets/fotos/001.jpg" alt="">
             <div class="parrafo1">
-                <p>¿Alguna vez has soñado con ser parte de un negocio que no solo es rentable, sino también vital en el
-                    mercado actual? Bienvenido a una oportunidad única en el mundo de la maduración de banano, un sector
-                    en donde la demanda siempre supera la oferta.</p>
+                <p>En pleno auge de la Agricultura peruana, invertir en las necesidades de un sector que crece de manera
+                    acelerada y que aún pocos interesados lo hacen, es invertir de forma visionaria. Los que lo hacen,
+                    no sólo ven retornar dicha inversión de manera rápida, sino que multiplican su capital.
+                </p>
                 <p>Imagina ser el motor detrás de 5500 cajas de bananos cada semana, con un margen de ganancia de
                     S/.2.40 por caja. No es solo un negocio, es una máquina de hacer dinero esperando a ser aprovechada.
                 </p>
@@ -1150,7 +1151,7 @@
                 <div class="s4_cont">
                     <img src="./assets/nuevo/s403.png" alt="">
                     <p>Ser parte de un negocio cuyo <span>retorno</span> sobre la inversión es aproximadamente <span>6
-                            meses a un año</span> 
+                            meses a un año</span>
                     </p>
                 </div>
                 <div class="s4_cont">
