--- a/Landing_mb.html
+++ b/Landing_mb.html
@@ -224,7 +224,7 @@
         text-align: end;
     }
 
-    .parrafo2 span {
+    .parrafo2 .spann {
         color: #00AE45;
         font-weight: 700;
         font-style: italic;
@@ -1097,21 +1097,19 @@
             <img src="./assets/fotos/001.jpg" alt="">
             <div class="parrafo1">
                 <p>En pleno auge de la Agricultura peruana, invertir en las necesidades de un sector que crece de manera
-                    acelerada y que aún pocos interesados lo hacen, es invertir de forma visionaria. Los que lo hacen,
-                    no sólo ven retornar dicha inversión de manera rápida, sino que multiplican su capital.
+                    acelerada y que aún pocos interesados lo hacen, es <span>invertir de forma visionaria</span>. Los que lo hacen,
+                    no sólo ven retornar dicha inversión de manera rápida, sino que <span>multiplican su capital.</span>
                 </p>
-                <p>Imagina ser el motor detrás de 5500 cajas de bananos cada semana, con un margen de ganancia de
-                    S/.2.40 por caja. No es solo un negocio, es una máquina de hacer dinero esperando a ser aprovechada.
+                <p>Muchos apuestan en sembrar y pocos en satisfacer las necesidades de los que siembran y del producto
+                    cosechado: <span>¡Los servicios de conservación y maduración!</span>
                 </p>
             </div>
         </div>
         <div class="s1_cont coo">
             <div class="parrafo2">
-                <p>Pero, ¿qué hace que esta oportunidad sea tan especial? el banano es más que una fruta; es un
-                    símbolo de nutrición rápido y saludable, un elemento básico en la dieta de millones. En el mercado
-                    nacional, su rotación es incomparable, lo que convierte a las cámaras de maduración en una necesidad
-                    más que en un lujo.</p>
-                <p> <span>Y aquí es donde tú entras. Te ofrecemos no solo un negocio, sino un legado.</span></p>
+                <p><span>La demanda supera con creces a la oferta actual.</span> Miles de estos servicios de maduración se facturan diariamente, pero miles más quedan en espera debido a la escasez de cámaras de maduración en Lima y en todo el Perú. <br>
+                    Es ahí donde se abren las <span>oportunidades para todo inversor visionario.</span></p>
+                <p> <span class="spann"> ¡Es hora de capitalizar esta brecha en el mercado!</span></p>
 
             </div>
             <img src="./assets/fotos/002.jpg" alt="">
