--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
   <!-- End Google Tag Manager -->
 
-
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -346,7 +348,7 @@
 
   /* SECCION 03 */
   .seccion_03 {
-    background-image: url("../assets/nuevo/fondos3.png");
+    background-image: url("./assets/nuevo/fondos3.png");
     width: 100%;
     height: 100vh;
     display: flex;
@@ -448,7 +450,7 @@
 
   /* SECCION05 */
   .seccion_05 {
-    background-image: url("../assets/nuevo/fondos5.png");
+    background-image: url("./assets/nuevo/fondos5.png");
     width: 100%;
     height: 100%;
     display: grid;
@@ -990,7 +992,7 @@
       </div>
 
       <div class="contenedors4">
-        
+
       </div>
 
       <div class="contenedors4">
