--- a/Landing_contacto_mb.html
+++ b/Landing_contacto_mb.html
@@ -88,7 +88,7 @@
         background-size: cover;
         background-position: center;
         transition: all 0.1s ease-in-out;
-        background-image: url('../assets/im001.jpeg');
+        background-image: url('./assets/im001.jpeg');
         animation: banner 28s infinite linear;
 
     }
@@ -237,7 +237,7 @@
 
     .seccion_02 {
         width: 100%;
-        background-image: url('../assets/banner_img/fondo-banner-azul.jpg');
+        background-image: url('./assets/banner_img/fondo-banner-azul.jpg');
         background-size: cover;
         display: grid;
         gap: 100px;
