--- a/Landing_iquitos.html
+++ b/Landing_iquitos.html
@@ -367,7 +367,7 @@
     .banner {
         width: 100%;
         height: 100vh;
-        background-image: url('../assets/ban001.jpg');
+        background-image: url('./assets/ban001.jpg');
         background-size: cover;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -557,7 +557,7 @@
     }
 
     .uno {
-        background-image: url('../assets/card1.png');
+        background-image: url('./assets/card1.png');
         background-size: cover;
         position: relative;
 
@@ -575,7 +575,7 @@
     }
 
     .dos {
-        background-image: url('../assets/card2.jpg');
+        background-image: url('./assets/card2.jpg');
         position: relative;
         background-size: cover;
 
@@ -593,7 +593,7 @@
     }
 
     .tres {
-        background-image: url('../assets/card3.jpg');
+        background-image: url('./assets/card3.jpg');
         position: relative;
         background-size: cover;
 
@@ -630,7 +630,7 @@
     /* SECCION 6 */
     .seccion_06 {
         width: 100%;
-        background-image: url('../assets/seccion06.png');
+        background-image: url('./assets/seccion06.png');
         height: 100vh;
         background-size: cover;
         display: grid;
@@ -872,7 +872,7 @@
         height: 100%;
         color: #fff;
         margin-top: 30px;
-        background-image: url('../assets/ban001.jpg');
+        background-image: url('./assets/ban001.jpg');
         object-fit: cover;
         position: relative;
         z-index: 1;
