--- a/Landing_maduracion.html
+++ b/Landing_maduracion.html
@@ -85,7 +85,7 @@
         background-size: cover;
         background-position: center;
         transition: all 0.1s ease-in-out;
-        background-image: url('../assets/im001.jpeg');
+        background-image: url('./assets/im001.jpeg');
         animation: banner 28s infinite linear;
 
     }
@@ -133,22 +133,22 @@
 
         0%,
         25% {
-            background-image: url('../assets/im001.jpeg');
+            background-image: url('./assets/im001.jpeg');
         }
 
         26%,
         50% {
-            background-image: url('../assets/banner_img/camara_01.png');
+            background-image: url('./assets/banner_img/camara_01.png');
         }
 
         51%,
         75% {
-            background-image: url('../assets/banner_img/camara_02.png');
+            background-image: url('./assets/banner_img/camara_02.png');
         }
 
         76%,
         100% {
-            background-image: url('../assets/banner_img/camara_03.png');
+            background-image: url('./assets/banner_img/camara_03.png');
         }
     }
 
@@ -216,7 +216,7 @@
 
     .seccion_02 {
         width: 100%;
-        background-image: url('../assets/banner_img/fondo-banner-azul.jpg');
+        background-image: url('./assets/banner_img/fondo-banner-azul.jpg');
         background-size: cover;
         display: grid;
         gap: 100px;
@@ -430,7 +430,7 @@
 
     /* --------- */
     .seccion_03 {
-        background-image: url('../assets/banner_img/fondo-verde-banner.jpg');
+        background-image: url('./assets/banner_img/fondo-verde-banner.jpg');
         background-size: cover;
         width: 100%;
         height: 100%;
@@ -609,7 +609,7 @@
         width: 100%;
         height: 400px;
         text-align: center;
-        background-image: url('../assets/im001.jpeg');
+        background-image: url('./assets/im001.jpeg');
         background-size: cover;
         color: black;
     }
