--- a/LVR-camaramaduracion-cita.html
+++ b/LVR-camaramaduracion-cita.html
@@ -663,8 +663,8 @@
         <div class="cont_calendario">
             <!-- Principio del widget integrado de Calendly -->
             <div class="calendly-inline-widget"
-                data-url="https://calendly.com/vive-rentable/reunion-de-inversion?hide_gdpr_banner=1"
-                style="min-width:100%;height:100%"></div>
+                data-url="https://calendly.com/viverentablepe/camara-maduracion?hide_gdpr_banner=1&primary_color=2de601"
+                style="min-width:320px;height:700px;"></div>
             <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
             <!-- Final del widget integrado de Calendly -->
         </div>
