--- a/Landing_maduracion.html
+++ b/Landing_maduracion.html
@@ -133,22 +133,22 @@
 
         0%,
         25% {
-            background-image: url('./assets/im001.jpeg');
+            background-image: url('./assets/fotos/004.jpg');
         }
 
         26%,
         50% {
-            background-image: url('./assets/banner_img/camara_01.png');
+            background-image: url('./assets/fotos/001.jpg');
         }
 
         51%,
         75% {
-            background-image: url('./assets/banner_img/camara_02.png');
+            background-image: url('./assets/fotos/002.jpg');
         }
 
         76%,
         100% {
-            background-image: url('./assets/banner_img/camara_03.png');
+            background-image: url('./assets/fotos/003.jpg');
         }
     }
 
