--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
       <div class="card uno">
         <div class="front">
           <img src="./assets/nuevo/l01.png" alt="">
-          <p class="title">CÁMARA DE MADURACION DE BANANO</p>
+          <p class="title">CÁMARA DE MADURACIÓN DE BANANO</p>
           <p class="link">Ver más <img src="./assets/nuevo/flecha.png" alt=""></p>
         </div>
         <div class="back">
