--- a/index.html
+++ b/index.html
@@ -907,18 +907,15 @@
       <div class="card dos">
         <div class="front">
           <img src="./assets/nuevo/l02.png" alt="">
-          <p class="title">LOTES EN CHANCAY</p>
+          <p class="title">LOTES EN PARACAS</p>
           <p class="link">Ver más <img src="./assets/nuevo/flecha.png" alt=""></p>
         </div>
         <div class="back">
-          <p>El nuevo mega puerto de Chancay abre las puertas para el negocio de los terrenos, los cuales, según el
-            mismo
-            gobierno, podrán aumentar en valor de 5 a 10 veces.
-            <br> <br>
-            Ofrecemos la posibilidad de que inviertas con seguridad en la adquisición de terrenos amplios que otorgarán
-            un
-            rendimiento seguro en unos años. Tenemos todos los papeles en regla y muchas personas ya confían en
-            nosotros.
+          <p>En Paracas, joya turística de la costa peruana, se ofrece una oportunidad única: la venta de exclusivos
+            lotes situados en un entorno de incomparable belleza natural, estos terrenos ofrecen la posibilidad de
+            construir la casa de tus sueños, además esta inversión promete no solo un retorno financiero, sino también
+            experiencias inolvidables en un destino paradisíaco. ¡Aprovecha esta oportunidad y haz realidad tu sueño de
+            vivir en el paraíso! y tener un lugar hermoso en dónde pasarla en familia.
           </p>
         </div>
       </div>
